--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
-.idea/
+*.html
+*.pdf
+*.redxml
+*.swp
+*.txt
+*.upload
+*~
+.idea//lib
+.tags
+/*-[0-9][0-9].xml
+/.*.mk
+/.gems/
+/.refcache
+/.venv/
+/.vscode/
+/node_modules/
+/versioned/
+Gemfile.lock
+archive.json
+draft-blahaj-idr-bgp-mtu.xml
+package-lock.json
+report.xml
+!requirements.txt
